[project]
name = "reinforcement-learning-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "torch",
    "torchvision",
    "torchviz",
    "timm",
    "lightning",
    "torchmetrics",
    "tensorboard",
    "gymnasium",
    "rliable",
]



[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "rich",
    "rootutils",
    "pytest",
]
